<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <Button
        android:id="@+id/btn_create_observables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_create"/>

    <Button
        android:id="@+id/btn_math_observables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_math"/>

    <Button
        android:id="@+id/btn_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_merge"/>

    <Button
        android:id="@+id/btn_combine_latest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_combine_latest"/>

    <Button
        android:id="@+id/btn_debounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_debounce"/>

</LinearLayout>